--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -207,7 +207,7 @@
 
         <div class="choice-grid">
             
-            <!-- VOS LIENS (8 fichiers) -->
+            <!-- VOS LIENS (10 fichiers) -->
 
             <a href="bandes_magnetique.html" class="choice-card">
                 <div class="icon-wrapper">
@@ -268,6 +268,20 @@
                     <i data-lucide="maximize" class="lucide-main"></i>
                 </div>
                 <h2 class="card-title">Unités d'Aires</h2>
+            </a>
+
+            <a href="glisse_nombres_decimaux.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="move" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Glisse nombres décimaux</h2>
+            </a>
+
+            <a href="conversions.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="arrow-left-right" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Conversions</h2>
             </a>
 
         </div>
