--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -270,6 +270,14 @@
                 <h2 class="card-title">Unités d'Aires</h2>
             </a>
 
+            
+            <a href="glisse_entiers_flex.htm" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="move" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Glisse entiers</h2>
+            </a>
+
             <a href="glisse_nombres_decimaux.html" class="choice-card">
                 <div class="icon-wrapper">
                     <i data-lucide="move" class="lucide-main"></i>
