--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -271,7 +271,7 @@
             </a>
 
             
-            <a href="glisse_entiers_flex.htm" class="choice-card">
+            <a href="glisse_entiers_flex.html" class="choice-card">
                 <div class="icon-wrapper">
                     <i data-lucide="move" class="lucide-main"></i>
                 </div>
