--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -209,7 +209,7 @@
             
             <!-- VOS LIENS (10 fichiers) -->
 
-            <a href="bandes_magnetique.html" class="choice-card">
+            <a href="bandes_magnetiques.html" class="choice-card">
                 <div class="icon-wrapper">
                     <i data-lucide="magnet" class="lucide-main"></i>
                 </div>
