--- a/outils/plateaux_manipulation/tuiles_algébriques.html
+++ b/outils/plateaux_manipulation/tuiles_algébriques.html
@@ -127,27 +127,28 @@
         .hide-cursor, .hide-cursor * { cursor: none !important; }
         #custom-cursor { position: fixed; pointer-events: none; z-index: 9999; display: none; }
 
-        /* SIDEBAR BOUTONS */
+        /* SIDEBAR BOUTONS - MODIFIÉ (Transparent) */
         .tile-btn {
             position: relative;
-            background: white;
-            border: 1px solid #cbd5e1;
+            background: transparent;
+            border: none;
             border-radius: 8px;
             cursor: pointer;
             transition: transform 0.1s, background 0.2s;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+            box-shadow: none;
         }
-        .tile-btn:active { transform: translateY(1px); box-shadow: none; }
-        .tile-btn:hover { background: #f1f5f9; }
+        .tile-btn:active { transform: scale(0.95); }
+        .tile-btn:hover { background: rgba(0,0,0,0.05); }
         
         .preview-shape { 
             display: flex; align-items: center; justify-content: center; 
             border-radius: 2px; color: white; font-weight: bold; 
             font-family: 'Times New Roman', serif; font-style: italic;
             text-shadow: 0 1px 1px rgba(0,0,0,0.3);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2); /* Ombre légère sur la tuile elle-même */
         }
         .ps-green { background: #4ade80; border: 1px solid #15803d; }
         .ps-red { background: #f87171; border: 1px solid #b91c1c; }
