--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -252,7 +252,7 @@
             </a>
 
             <!-- TUILES ALGEBRIQUES : Pas de badge construction + Icône Spéciale -->
-            <a href="tuiles_algébriques.html" class="choice-card">
+            <a href="tuiles_algebriques.html" class="choice-card">
                 <div class="icon-wrapper">
                     <!-- SVG personnalisé : Petit carré + Rectangle long -->
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-main">
