--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -260,9 +260,19 @@
                         <rect x="12" y="2" width="8" height="20" rx="1"/> <!-- Rectangle long -->
                     </svg>
                 </div>
+                <h2 class="card-title">Tuiles Algébriques - Équations</h2>
+            </a>
+            <a href="tuiles_algebriques_mode_equation.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <!-- SVG personnalisé : Petit carré + Rectangle long -->
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-main">
+                        <rect x="2" y="14" width="8" height="8" rx="1"/> <!-- Petit carré -->
+                        <rect x="12" y="2" width="8" height="20" rx="1"/> <!-- Rectangle long -->
+                    </svg>
+                    <div class="construction-badge"><i data-lucide="hammer"></i></div>
+                </div>
                 <h2 class="card-title">Tuiles Algébriques</h2>
             </a>
-
             <a href="unités d'aires.html" class="choice-card">
                 <div class="icon-wrapper">
                     <i data-lucide="maximize" class="lucide-main"></i>
