--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -260,7 +260,7 @@
                         <rect x="12" y="2" width="8" height="20" rx="1"/> <!-- Rectangle long -->
                     </svg>
                 </div>
-                <h2 class="card-title">Tuiles Algébriques - Équations</h2>
+                <h2 class="card-title">Tuiles Algébriques</h2>
             </a>
             <a href="tuiles_algebriques_mode_equation.html" class="choice-card">
                 <div class="icon-wrapper">
@@ -271,7 +271,7 @@
                     </svg>
                     <div class="construction-badge"><i data-lucide="hammer"></i></div>
                 </div>
-                <h2 class="card-title">Tuiles Algébriques</h2>
+                <h2 class="card-title">Tuiles-Équation</h2>
             </a>
             <a href="unités d'aires.html" class="choice-card">
                 <div class="icon-wrapper">
