--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -271,7 +271,7 @@
                     </svg>
                     <div class="construction-badge"><i data-lucide="hammer"></i></div>
                 </div>
-                <h2 class="card-title">Tuiles-Équation</h2>
+                <h2 class="card-title">Tuiles</h2>
             </a>
             <a href="unités d'aires.html" class="choice-card">
                 <div class="icon-wrapper">
