--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -259,7 +259,7 @@
                         <rect x="12" y="2" width="8" height="20" rx="1"/>
                     </svg>
                 </div>
-                <h2 class="card-title">Tuile algébrique</h2>
+                <h2 class="card-title">Tuiles algébriques</h2>
             </a>
 
             <a href="tuiles_algebriques_mode_equation.html" class="choice-card">
@@ -283,7 +283,7 @@
 
                     <div class="construction-badge"><i data-lucide="hammer"></i></div>
                 </div>
-                <h2 class="card-title">Tuile algébrique équation</h2>
+                <h2 class="card-title">Tuiles algébriques équations</h2>
             </a>
 
             <a href="unités d'aires.html" class="choice-card">
