--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -283,7 +283,7 @@
 
                     <div class="construction-badge"><i data-lucide="hammer"></i></div>
                 </div>
-                <h2 class="card-title">Tuiles algébriques équations</h2>
+                <h2 class="card-title">Tuiles équations</h2>
             </a>
 
             <a href="unités d'aires.html" class="choice-card">
