--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -213,6 +213,30 @@
                 <h2 class="card-title">Bandes Magnétiques</h2>
             </a>
 
+            <!-- AJOUT : Bandes de fractions -->
+            <a href="bandes_fractions.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <!-- SVG personnalisé : bandes fractionnées -->
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                         class="lucide-main">
+                        <!-- bande 1 (en 3) -->
+                        <rect x="3" y="4" width="18" height="4" rx="1"/>
+                        <line x1="9" y1="4" x2="9" y2="8"/>
+                        <line x1="15" y1="4" x2="15" y2="8"/>
+                        <!-- bande 2 (en 2) -->
+                        <rect x="3" y="10" width="18" height="4" rx="1"/>
+                        <line x1="12" y1="10" x2="12" y2="14"/>
+                        <!-- bande 3 (en 4) -->
+                        <rect x="3" y="16" width="18" height="4" rx="1"/>
+                        <line x1="7" y1="16" x2="7" y2="20"/>
+                        <line x1="12" y1="16" x2="12" y2="20"/>
+                        <line x1="17" y1="16" x2="17" y2="20"/>
+                    </svg>
+                </div>
+                <h2 class="card-title">Bandes de fractions</h2>
+            </a>
+
             <a href="cubes_construction.html" class="choice-card">
                 <div class="icon-wrapper">
                     <i data-lucide="box" class="lucide-main"></i>
